--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,10 +48,8 @@ main {
   margin-top: 4rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  height: calc(100% - 4rem);
-  /* height: 100%; */
+  height: 100%;
   width: 100vw;
 }
 
@@ -60,11 +58,6 @@ a {
   text-decoration: none;
 }
 
-/* .navbar__main {
-  height: 3rem;
-} */
-
-/* Mui AppBar */
 .MuiAppBar-root {
   background-color: var(--background-hex);
   height: 4rem;
